# vibe-code-exam

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Jenkinsfile  PRD.md  README.md  agent_prompt_fix_import_bugs.md  alembic.ini  docker-compose.yml  pyproject.toml  summary.md
.claude/: CLAUDE.md
app/: __init__.py  config.py  db.py  deps.py  logging.py  main.py  middleware.py  paths.py  redis_client.py
app/audit/: __init__.py  events.py  writer.py
app/auth/: __init__.py  csrf.py  guest.py  guest_token.py  permissions.py  rate_limit.py  service.py  session.py
content/: topics-seed.sql
docs/: beta-feedback-log.md  code-standards.md  deployment-guide.md  disclaimer.md  dmca-takedown.md  docker-deployment.md  privacy-policy.md  project-changelog.md  project-overview-pdr.md  project-roadmap.md  readiness-checklist.md  restore-test-environment.md  security-baseline.md  system-architecture.md  terms-of-service.md
migrations/: env.py
plans/: NewPRD.md
scripts/: cleanup_providers.py  create_admin.py  db-setup.sh  rehash_questions.py  restore-test-dataset.sh  smoke_milestone1_fixture.py  verify_phase03.py
seed/: README.md  test_dataset.sql
tests/: conftest.py  test_admin_dashboard.py  test_attempt_unit.py  test_auth_real_db.py  test_auth_unit.py  test_catalog_real_db.py  test_catalog_schemas_unit.py  test_community_vote_format_unit.py  test_config.py  test_csrf_unit.py  test_guest_practice.py  test_health.py  test_health_routes.py  test_import_real_db.py  test_import_unit.py  test_legal_pages.py  test_models_smoke.py  test_practice_real_db.py  test_question_real_db.py  test_question_schemas_unit.py  test_rate_limit_unit.py  test_scoring_real_db.py  test_scoring_unit.py
(+252 files in other folders)
